YD-511 Raw activity data now includes device name
Along with this added missing parts to Swagger spec:
* /users/{userID}/devices/{deviceID}/appActivity/ path
* deviceAppVersion in PostPutUser

Next step is to add integration tests on the raw data to see that activities on different devices are handled properly
